# tram

./: .coveragerc  .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .sonarcloud.properties  CONTRIBUTING.md  Dockerfile  ML.md  Makefile  NOTICE.txt  README.md  download_nltk.py  hook.py  pyproject.toml  requirements.txt  setup.cfg  test_tram.py  tox.ini  tram.py
.github/workflows/: build-push-container.yml  linter.yml  test.yml
app/api/: rest.py
app/models/: base_model.py  regex.py
app/objects/: c_match.py  c_report.py  c_search.py
app/services/: app_svc.py  auth_service.py  data_svc.py  file_svc.py  machine_svc.py  tram_svc.py
app/utility/: base_object.py  base_world.py  file_parser.py  regex_parser.py
conf/: regex.yml
data/: .dockerignore
data/attack/: license.txt  mobile-attack.json  pre-attack.json
data/media/: simple-test.docx
data/model-development/: fasttext_and_logistic_regression.ipynb  train_bert_multiclass.ipynb
docker/: Dockerfile  Dockerfile.nginx  README.md  build.md  build.sh  docker-compose.yml  docker-compose_linux.yml  entrypoint.sh  nginx-tram.conf
docs/: Add-your-own-export-interface.md  conf.py
model-development/: train_multi_label.ipynb  train_single_label.ipynb
requirements/: requirements.txt  test-requirements.txt
templates/: analytics.html
tests/: conftest.py
tram-service/: start_tram_server.sh  tram-system-service
user_notebooks/: fine_tune_multi_label.ipynb  fine_tune_single_label.ipynb  predict_multi_label.ipynb  predict_single_label.ipynb  readme.md
va_parser/: parser.py
(+185439 files in other folders)
