[build-system]
requires = [
  "setuptools>=61",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tram"
version = "1.3.0"
description = "Threat Report ATT&CK Mapping (TRAM) is an open-source platform designed to advance research into automating the mapping of cyber threat intelligence reports to MITRE ATT&CK®."
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
tram = "tram.manage:main"

[tool.black]
exclude = '''
/(
  \.mypy_cache
  | \.venv
  | venv
  | src/tram/migrations
  | node_modules
  | .tox
  | .git
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = "src/tram/migrations/*"
