[metadata]
name = tram
version = 1.1.3
description = Threat Report ATT&CK Mapping (TRAM) is an open-source platform designed to advance research into automating the mapping of cyber threat intelligence reports to MITRE ATT&CK®.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/center-for-threat-informed-defense/tram

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    tram = tram.manage:main

[bdist_wheel]
universal = 1
